crates/fec-parser/tests/snapshots/covers__f3pa_1863008.snap
---
source: crates/fec-parser/tests/covers.rs
expression: "cover(\"F3PA_1863008.fec\")"
snapshot_kind: text
---
{
  "form": "Form3P",
  "data": {
    "form_type": "F3PA",
    "filer_committee_id": "C00828541",
    "committee_name": "DONALD J. TRUMP FOR PRESIDENT 2024, INC.",
    "address": {
      "street_1": "P.O. BOX 509",
      "street_2": null,
      "city": "ARLINGTON",
      "state": "VA",
      "zip_code": "22216"
    },
    "change_of_address": false,
    "activity_primary": false,
    "activity_general": false,
    "report_code": "12G",
    "election_code": "G2024",
    "election_date": "2024-11-05",
    "state_of_election": null,
    "coverage_from_date": "2024-10-01",
    "coverage_through_date": "2024-10-16",
    "treasurer": {
      "first_name": "BRADLEY",
      "last_name": "CRATE",
      "middle_name": "T.",
      "prefix": null,
      "suffix": null
    },
    "date_signed": "2025-01-13",
    "summary": {
      "line6_cash_on_hand_beginning_period": 119676444.12,
      "line7_total_receipts": 16227642.28,
      "line8_subtotal": 135904086.4,
      "line9_total_disbursements": 99689404.21,
      "line10_cash_on_hand_end_period": 36214682.19,
      "line11_debts_owed_to_committee": 2864905.96,
      "line12_debts_owed_by_committee": 10445.91,
      "line13_expenditures_subject_to_limits": 0.0,
      "line14_net_contributions_other_than_loans": 54728299.93,
      "line15_net_operating_expenditures": 340862592.67
    },
    "detailed_summary": {
      "receipts": {
        "line16_federal_funds": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line17a_i_contributions_from_individuals_itemized": {
          "column_a": 7658517.33,
          "column_b": 34419624.1
        },
        "line17a_ii_contributions_from_individuals_unitemized": {
          "column_a": 3800912.95,
          "column_b": 20105135.52
        },
        "line17a_iii_contributions_from_individuals_total": {
          "column_a": 11459430.28,
          "column_b": 54524759.62
        },
        "line17b_political_party_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line17c_other_political_committees": {
          "column_a": 12000.0,
          "column_b": 272268.95
        },
        "line17d_the_candidate": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line17e_total_contributions": {
          "column_a": 11471430.28,
          "column_b": 54797028.57
        },
        "line18_transfers_from_other_authorized_committee": {
          "column_a": 1723773.11,
          "column_b": 318583425.25
        },
        "line19a_loans_received_from_or_guaranteed_by_candidate": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line19b_other_loans": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line19c_total_loans": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line20a_offsets_to_expenditures_operating": {
          "column_a": 1807684.44,
          "column_b": 10313821.97
        },
        "line20b_offsets_to_expenditures_fundraising": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line20c_offsets_to_expenditures_legal_and_accounting": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line20d_offsets_to_expenditures_total": {
          "column_a": 1807684.44,
          "column_b": 10313821.97
        },
        "line21_other_receipts": {
          "column_a": 1224754.45,
          "column_b": 8226254.68
        },
        "line22_total_receipts": {
          "column_a": 16227642.28,
          "column_b": 391920530.47
        }
      },
      "disbursements": {
        "line23_operating_expenditures": {
          "column_a": 99659165.57,
          "column_b": 351176414.64
        },
        "line24_transfers_to_other_authorized_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line25_fundraising_disbursements": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line26_exempt_legal_and_accounting_disbursements": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line27a_loan_repayments_candidate": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line27b_loan_repayments_other": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line27c_loan_repayments_total": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line28a_refunds_to_individuals": {
          "column_a": 30238.64,
          "column_b": 67728.64
        },
        "line28b_refunds_to_political_party_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line28c_refunds_to_other_political_committees": {
          "column_a": 0.0,
          "column_b": 1000.0
        },
        "line28d_refunds_total": {
          "column_a": 30238.64,
          "column_b": 68728.64
        },
        "line29_other_disbursements": {
          "column_a": 0.0,
          "column_b": 4460705.0
        },
        "line30_total_disbursements": {
          "column_a": 99689404.21,
          "column_b": 355705848.28
        }
      },
      "line31_items_on_hand_to_be_liquidated": 0.0
    },
    "state_allocations": {
      "states": [
        {
          "state": "Alabama",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Alaska",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Arizona",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Arkansas",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "California",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Colorado",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Connecticut",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Delaware",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "District of Columbia",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Florida",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Georgia",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Hawaii",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Idaho",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Illinois",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Indiana",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Iowa",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Kansas",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Kentucky",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Louisiana",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Maine",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Maryland",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Massachusetts",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Michigan",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Minnesota",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Mississippi",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Missouri",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Montana",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Nebraska",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Nevada",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "New Hampshire",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "New Jersey",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "New Mexico",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "New York",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "North Carolina",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "North Dakota",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Ohio",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Oklahoma",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Oregon",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Pennsylvania",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Rhode Island",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "South Carolina",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "South Dakota",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Tennessee",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Texas",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Utah",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Vermont",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Virginia",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Washington",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "West Virginia",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Wisconsin",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Wyoming",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Puerto Rico",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Guam",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Virgin Islands",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        }
      ],
      "totals": {
        "column_a": 0.0,
        "column_b": 0.0
      }
    }
  }
}
